[package]
name = "hypernsga"
version = "0.0.1"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/hypernsga"
description = "Hyper-cube based neural network optimization using NSGA2"
keywords = ["evolution", "neuro", "net", "algorithm", "cppn"]

include = ["src/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]

rand = "0.3"
rayon = "0.3.1"
log = "0.3.5"
cppn = {git = "https://github.com/mneumann/cppn-rs"}
acyclic-network = {git = "https://github.com/mneumann/acyclic-network-rs"}
graph-neighbor-matching = "0.6.1"
nsga2 = {git = "https://github.com/mneumann/nsga2-rs"}
hamming = "0.1"
primal-bit = "0.2.3"
closed01 = "0.4"
asexp = "0.3.0"
graph-io-gml = "0.1.0"
petgraph = "0.2.3"


[dev-dependencies]
criterion-stats = "0.1.0"
#pcg = { git = "https://github.com/codahale/pcg.git" }
imgui = { git = "https://github.com/gekkio/imgui-rs" }
glium = "0.13"
time = "0.1"
conrod = "0.32.0"
piston_window = "0.38.0"
libc = "0.2"
graph-layout = { git = "https://github.com/mneumann/graph-layout-rs" }
