[package]
name = "hypernsga"
version = "0.0.2"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/hypernsga"
description = "Hyper-cube based neural network optimization using NSGA2"
keywords = ["evolution", "neuro", "net", "algorithm", "cppn"]

include = ["src/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]

rand = "0.3"
rayon = "0.3"
log = "0.3"
cppn = "0.1"
acyclic-network = "0.0.1"
graph-neighbor-matching = "0.6"
nsga2 = {git = "https://github.com/mneumann/nsga2-rs"}
hamming = "0.1"
primal-bit = "0.2"
closed01 = "0.4"
asexp = "0.3"
graph-io-gml = "0.1"
petgraph = "0.2"


[dev-dependencies]
#criterion-stats = "0.1"
#pcg = { git = "https://github.com/codahale/pcg.git" }
imgui = "0.0.9"
glium = "0.14"
time = "0.1"
piston_window = "0.47"
libc = "0.2"
graph-layout = { git = "https://github.com/mneumann/graph-layout-rs" }
