[package]
name = "hypernsga-gui"
version = "0.0.1"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/hypernsga"
description = "GUI for Hyperneat (Hyper-cube based neural network optimization using NSGA2)"
keywords = ["evolution", "neuro", "net", "algorithm", "cppn"]

include = ["src/*.rs", "Cargo.toml"]

[dependencies]

hypernsga = { path = ".." }
nsga2 = {git = "https://github.com/mneumann/nsga2-rs"}
graph-layout = { git = "https://github.com/mneumann/graph-layout-rs" }
rand = "0.3"
time = "0.1"
conrod = "0.47"
find_folder = "0.3"
